<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4267B2"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D4D4D5">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="2dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/num_tel"
                android:textColor="#302F2F" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3E3E3"
                android:ems="10"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="5sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mdp"
                android:textColor="#222222" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E3E3E3"
                android:ems="10"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="5sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="#2d88ff"
                android:padding="12sp"
                android:text="@string/connect"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:backgroundTint="#D82D88FF" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/mdp_oublie" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="#5cb85c"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/creer"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="#5cb85c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4267B2"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/aide"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="3dp"
                android:text="@string/quit"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>